--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <!--[if IE 9 ]>    <html lang="en-gb" class="isie ie9 no-js"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en-gb" class="no-js"> <!--<![endif]-->
 <head>
-	<meta charset="gbk">
+	<meta charset=" UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->	
-	<title>科技h5技术网站</title>	
+	<title>驴脝录录h5录录脢玫脥酶脮戮</title>	
 	<meta name="description" content="">
 	<meta name="author" content="">    
     <!--[if lt IE 9]>
