--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->	
-	<title>¿Æ¼¼h5¼¼ÊõÍøÕ¾</title>	
+	<title>vuedemo</title>	
 	<meta name="description" content="">
 	<meta name="author" content="">    
     <!--[if lt IE 9]>
