--- a/vue2.0TodoList/index.html
+++ b/vue2.0TodoList/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>todos</title>
+    <title>todosList</title>
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="./vue.js"></script>
