--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->	
 	<title>vuedemo-TodoList</title>	
-	<meta name="description" content="">
-	<meta name="author" content="">    
+	<meta name="description" content="123">
+	<meta name="author" content="123">    
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->    
