--- a/vue2.0TodoList/index.html
+++ b/vue2.0TodoList/index.html
@@ -15,7 +15,7 @@
                 <h1>todos</h1>
                 <input 
                     class="new-todo" 
-                    placeholder="请输入内容啊" 
+                    placeholder="请输入内容" 
                     @keyup.enter="addItem"
                 >
             </header>
