--- a/webpack-vue-spa/index.html
+++ b/webpack-vue-spa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>个人站</title>
+	<title>个人站12345</title>
 	<link rel="stylesheet" href="./build/style.css">
 </head>
 <body>
