--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->	
-	<title>vuedemo-TodoList</title>	
+	<title>vuedemo-TodoList1</title>	
 	<meta name="description" content="123">
 	<meta name="author" content="123">    
     <!--[if lt IE 9]>
