--- a/vue-area/demo/index.html
+++ b/vue-area/demo/index.html
@@ -17,9 +17,9 @@ p{padding-left: 20px;}
 <div id="app">
 	<div>
 		<a href="javascript:;" @click="show = true">Hello Vue.js!</a>
-		<p v-cloak>省：{{result.province.name}} {{result.province.code}}</p>
-		<p v-cloak>市：{{result.city.name}} {{result.city.code}}</p>
-		<p v-cloak>区：{{result.area.name}} {{result.area.code}}</p>
+		<p v-cloak>1省：{{result.province.name}} {{result.province.code}}</p>
+		<p v-cloak>2市：{{result.city.name}} {{result.city.code}}</p>
+		<p v-cloak>3区：{{result.area.name}} {{result.area.code}}</p>
 		
 	</div>
 	<vue-area :show.sync="show" :result.sync="result"></vue-area>
