--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-        <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+        <li data-target="#myCarousel" data-slide-to="0" class="">1</li>
+        <li data-target="#myCarousel" data-slide-to="1" class="active">2</li>
+        <li data-target="#myCarousel" data-slide-to="2" class="">3</li>
       </ol>
       <div class="carousel-inner">
         <div class="item">
