--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         	<div class="navbar-header">
 	            <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
 		            <span class="sr-only">Toggle navigation</span>
-		            <span class="icon-bar"></span>
+		            <span class="icon-bar">123</span>
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
 	            </button>
