--- a/notes-app-vuejs-vuex/index.html
+++ b/notes-app-vuejs-vuex/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Notes | ioloveuuu.io</title>
+    <title>Notes | ioloveuuu.ieo</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
   </head>
